--- a/public/index.html
+++ b/public/index.html
@@ -49,15 +49,15 @@
   <script src="https://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script> 
   <script src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script> 
   <script src="https://js.api.here.com/v3/3.0/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script> 
-  <!-- leaft maps dependencias    -->
-  <!-- unpkg, production (minified) -->
-  <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.min.js"></script>
-  <!-- unpkg, development -->
-  <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.js"></script>
-  <!-- CDNJS, production (minified) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.min.js"></script>
-  <!-- CDNJS, development -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.js"></script>
+  <!-- leaft maps dependencias    
+    <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.min.js"></script>
+    <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-leaflet/2.0.0/react-leaflet.js"></script>
+    CDNJS, development -->
+    <!-- unpkg, development -->
+    <!-- CDNJS, production (minified) -->
+    <!-- unpkg, production (minified) -->
 
 
   <!-- bing maps dependencias    
